prediction/manifests/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prediction
  labels:
    app: prediction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prediction
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: prediction
    spec:
      containers:
        - name: prediction
          image: bisry/earlyvet-prediction
          ports:
            - containerPort: 5003
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
