prediction/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prediction
spec:
  selector:
    app: prediction
  type: ClusterIP
  ports:
    - port: 5003
      targetPort: 5003
      protocol: TCP
